--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
 	  <div class="row">
 		<div class="col-sm-4">
 			
-		  <p>&copy 2021 Yongchao Yang's Dynamics & Intelligent Systems (DIS) Group. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">.</a></p>
-              <!--<p>We are part of the <a href="https://www.physics.leidenuniv.nl/">Leiden Institute of Physics</a> at <a href="https://www.leidenuniv.nl">Leiden University</a>.</p>-->
+		  <p>&copy 2021 Yongchao Yang's Dynamics & Intelligent Systems (DIS) Group. Site made with <a href="https://jekyllrb.com">Jekyll.</a></p>
+              
             
 
 		   <p>  </p><p>
