--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Dynamics & Intelligent Systems (DIS) Group @ Michigan Tech</a>
+    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Dynamics & Intelligent Systems Group @ Michigan Tech</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
