--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	  <div class="row">
 		<div class="col-sm-4">
 			
-		  <p>&copy 2021 Yongchao Yang's Dynamics & Intelligent Systems (DIS) Group. Site made with <a href="https://jekyllrb.com">Jekyll.</a></p>
+		  <p>&copy 2021 Dynamics & Intelligent Systems (DIS) Group. Site made with <a href="https://jekyllrb.com">Jekyll.</a></p>
               
             
 
@@ -12,19 +12,20 @@
             		  
             
 		</div>
-		<div class="col-sm-4">
+		<!--<div class="col-sm-4"> -->
 		<!--  Funding:<br />
 		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
 		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
           - <a href='https://www.universiteitleiden.nl/en/news/2017/08/two-erc-grants-for-leiden-physics'>ERC starting grant</a>  -->
-		</div>
+		<!--</div> -->
 		<div class="col-sm-4">
-		 <!-- Contact:<br />
-		  Oort building, Leiden University<br />
-		  Niels Bohrweg 2<br />
-		  2333 CA Leiden<br />
-		  Netherlands <br />
-            (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>) -->
+		  Contact:<br />
+                  Group Director: Dr. Yongchao Yang
+		  Assistant Professor<br />
+		  Email: ycyang@mtu.edu<br />
+		  Phone: 906-487-3405<br />
+		  1400 Townsend Drive, Houghton, MI 49931 <br />
+            <!--(<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>) -->
 		</div>
 	  </div>
 	</div>
