--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,12 +18,12 @@
 		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
           - <a href='https://www.universiteitleiden.nl/en/news/2017/08/two-erc-grants-for-leiden-physics'>ERC starting grant</a>  -->
 		<!--</div> -->
-		<div class="col-sm-4">
+		<div class="col-md-4">
 		  Contact:<br />
-                  Group Director: Dr. Yongchao Yang
-		  Assistant Professor<br />
-		  Email: ycyang@mtu.edu<br />
-		  Phone: 906-487-3405<br />
+                  Group Director: Dr. Yongchao Yang, Assistant Professor<br />
+		  Department of Mechanical Engineering - Engineering Mechancis <br />
+		  Michigan Technological University<br />
+		  Email: ycyang@mtu.edu Phone: 906-487-3405<br />
 		  1400 Townsend Drive, Houghton, MI 49931 <br />
             <!--(<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>) -->
 		</div>
