--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,12 +18,12 @@
 		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
           - <a href='https://www.universiteitleiden.nl/en/news/2017/08/two-erc-grants-for-leiden-physics'>ERC starting grant</a>  -->
 		<!--</div> -->
-		<div class="row">
+		<div class="col-md-6">
 		  Contact:<br />
-                  Group Director: Dr. Yongchao Yang, Assistant Professor<br />
-		  Department of Mechanical Engineering - Engineering Mechancis <br />
+                  Dr. Yongchao Yang, Assistant Professor<br />
+		  Dept. Mechanical Engineering - Engineering Mechanics <br />
 		  Michigan Technological University<br />
-		  Email: ycyang@mtu.edu Phone: 906-487-3405<br />
+		  ycyang@mtu.edu 906-487-3405<br />
 		  1400 Townsend Drive, Houghton, MI 49931 <br />
             <!--(<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>) -->
 		</div>
