--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
 		  Dept. Mechanical Engineering - Engineering Mechanics <br />
 		  Michigan Technological University<br />
 		  ycyang@mtu.edu 906-487-3405<br />
-		  Houghton, MI 49931 <br />
+		  Houghton, MI 49931
             <!--(<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>) -->
 		</div>
 	  </div>
